# hedcut

./: README.md
assignment/: assignment.tex
hedcuter/code/: CMakeLists.txt  hedcut.cpp  hedcut.h  main.cpp  simple_svg_1.0.0.hpp  wcvt.cpp  wcvt.h  wcvt_gpu.cpp  wcvt_gpu.h
hedcuter/code/vc_files/: hedcut.sln  hedcut.vcxproj  hedcut.vcxproj.filters
report/: report.tex
voronoi/picopng/: picopng.vcxproj
voronoi/stippler/: stippler.vcxproj
voronoi/voronoi/: voronoi.cpp  voronoi.vcxproj
